# gmock_testing

./: CMakeLists.txt  SoundexTest.cc
